--- a/descriptive_stats.qmd
+++ b/descriptive_stats.qmd
@@ -30,6 +30,8 @@ library(tidyverse)
 library(DescTools)
 ```
 
+***REMEMBER***: An *R* package must be installed before it can be used with the command `install.packages` or via the *RStudio* interface.
+
 <hr>
 
 <br> <br>
@@ -68,31 +70,17 @@ Using the `starbucks` dataset, we can look at some of these descriptive statisti
 
 ### Notation {.tight-top}
 
-<details>
-
-<summary>Click to see notion information</summary>
-
-As a quick reminder, we use Greek lettering for *populations* and Roman lettering for samples. For example:
+We use Greek lettering for *populations* and Roman lettering for samples. For example:
 
 -   $\sigma$ is a population, but $s$ is a sample (both these variables refer to *standard deviation*).
 
 -   $\mu$ is a population, but $\bar{x}$ is a sample (both of these variables refer to the *mean*).
 
-</details>
-
-<hr>
-
-<br> <br>
-
-<hr>
-
-### Mean {.tight-top}
-
-<details>
-
-<summary>Click to see how to calculate mean</summary>
+### Mean
 
 The mean is the "average" value within a set of data, specifically, the sum of all values divided by the length of those values: $\frac{\sum_{i=1}^nx}{n}$.
+
+<summary>Click to see how to calculate *Mean*</summary>
 
 ```{r}
 head(starbucks)
@@ -138,17 +126,25 @@ round(sum(fraps)/length(fraps),0)
 
 ### Range {.tight-top}
 
+The range is the difference between the largest and smallest units in a dataset. I.e., it is the maximum value in a dataset minus the smallest value in a dataset.
+
 <details>
 
-<summary>Click to see how to calculate range</summary>
+<summary>Click to see how to calculate *Range*</summary>
 
-The range is the difference between the largest and smallest units in a dataset. We can use the commands `min` and `max` to calculate this.
+We can use the commands `min` and `max` to calculate this.
 
 ```{r}
 max(fraps) - min(fraps)
 ```
 
 The range of our dataset is 13.
+
+***NOTE*** that the *R* function `range` will not return the statistic of range, it will only return the maximum and minimum values from the dataset. This is ***not*** the correct answer when asked for the range for any homework or test questions.
+
+```{r}
+range(fraps)
+```
 
 </details>
 
@@ -160,13 +156,18 @@ The range of our dataset is 13.
 
 ### Median {.tight-top}
 
+The median is also known as the 50th percentile, and is the midpoint of the data when ordered from least to greatest. If there are an even number of data points, then it is the average point between the two center points. For odd data, this is the $\frac{n+1}{2}$th observation. For even data, since we need to take an average, this is the $\frac{\frac{n}{2}+(\frac{n}{2}+1)}{2}$.
+
 <details>
 
-<summary>Click to see how to calculate the median</summary>
+<summary>Click to see how to calculate the *Median*</summary>
 
-The median is also known as the 50th percentile, and is the midpoint of the data when ordered from least to greatest. If there are an even number of data points, then it is the average point between the two center points. For odd data, this is the $\frac{n+1}{2}$th observation. For even data, since we need to take an average, this is the $\frac{\frac{n}{2}+(\frac{n}{2}+1)}{2}$. You should be able to do these by hand and by using a program.
+*R* has a default method for calculating median - `median`.
+
+#### Odd number of values
 
 ```{r}
+# use default
 median(fraps)
 ```
 
@@ -202,7 +203,9 @@ Which is the fifth element in the vector?
 frap_order[5]
 ```
 
-Now let's try it for an even numbers.
+#### Even number of values
+
+Given that we are trying to find the "middle" number, this is more complicated when using a vector that has an even number of values. Let's calculate this by hand:
 
 ```{r}
 # remove first element
@@ -245,11 +248,13 @@ As we can see, these values are equal!
 
 ### Other quartiles and quantiles {.tight-top}
 
+We also use the 25th percentile (25%, 0.25) and the 75th percentile (75%, 0.75) to understand data distributions. These are calculated similar to the above, but the bottom quartile is only $\frac{1}{4}$ of the way between values and the 75th quartile is $\frac{3}{4}$ of the way between values. We can use the *R* function `quantile` to calculate these. **Before implementing, please read this whole section - *R* has nine different methods for calculating the quantiles!**
+
 <details>
 
-<summary>Click to see how to find quartiles and quantiles</summary>
+<summary>Click to see how to find *Quartiles* and *Quantiles*</summary>
 
-We also use the 25th percentile and the 75th percentile to understand data distributions. These are calculated similar to the above, but the bottom quartile is only $\frac{1}{4}$ of the way between values and the 75th quartile is $\frac{3}{4}$ of the way between values. We can use the *R* function `quantile` to calculate these.
+*R* has a default function for finding quantiles which is called `quantile`.
 
 ```{r}
 quantile(frap_order)
@@ -296,9 +301,9 @@ val <- (m2 - m1)*frac
 m1 + val
 ```
 
-Wait... why does our value differ?
+**Wait... why does our value differ?**
 
-*R*, by default, calculates quantiles using what is called `Type 7`, in which the quantiles are calculated by $p_k = \frac{k-1}{n-1}$, where $n$ is the length of the vector and $k$ refers to the quantile being used. However, in our book and in this class, we use `Type 6` interpretation - $p_k = \frac{k}{n + 1}$. Let's try using `Type 6`:
+*R*, by default, calculates quantiles using what is called `Type 7`, in which the quantiles are calculated by $p_k = \frac{k-1}{n-1}$, where $n$ is the length of the vector and $k$ refers to the quantile being used. However, in our class and in many situations, we use `Type 6` interpretation of $p_k = \frac{k}{n + 1}$. Let's try using `Type 6`:
 
 ```{r}
 quantile(even_fraps_order, type = 6)
@@ -320,11 +325,15 @@ This is a classic example of how things in *R* (and in statistics in general!) c
 
 ### Mode {.tight-top}
 
-There is no default code to find the mode in *R*. We can do this by hand, by counting the number of occurrences of each value as shown below.
+The mode is the value which occurs most frequently within a dataset.
 
 <details>
 
 <summary>Click to see manual method</summary>
+
+There is no default code to find the mode in *R*. We can do this by hand, by counting the number of occurrences of each value as shown below.
+
+This method is based on the custom function for mode outlined by [Statology](https://www.statology.org/mode-in-r/).
 
 ```{r}
 # unique counts
@@ -412,7 +421,7 @@ attr(,"freq")
 [1] 3
 ```
 
-The **first number** is the mode; in our case, two is our mode. The second line is the computer telling us that our second number is the frequency of our first number. In our case, that means our mode, which is two, appears three times. There are three twos.
+The **first number** is the mode; in our case, two is our mode. The second line is the computer telling us that our second number is the frequency of our first number. In our case, that means our mode, which is two, appears three times. The number 2 occurs thrice.
 
 If there are two or more modes, these numbers will also appear in the first line of the output.
 
@@ -426,15 +435,30 @@ If there are two or more modes, these numbers will also appear in the first line
 
 ### Variance {.tight-top}
 
-<details>
-
-<summary>Click to see how to calculate variance</summary>
-
 When we are dealing with datasets, the variance is a measure of the total spread of the data. The variance is calculated using the following:
 
 $$\sigma^2=\frac{\sum (x_i-\bar{x})^2}{n-1}$$
 
-Essentially, this means that for every value of $x$, we are finding the difference between that value and the mean and squaring it, summing all of these squared differences, and dividing them by the number of samples in the dataset minus one. Let's do this for the frappuccino dataset.
+Essentially, this means that for every value of $x$, we are finding the difference between that value and the mean and squaring it, summing all of these squared differences, and dividing them by the number of samples in the dataset minus one.
+
+<details>
+
+<summary>Click to see how to calculate *Variance*</summary>
+
+*R* has a built in function for variance - `var`.
+
+```{r}
+var(frap_order) |> 
+  round(2)
+```
+
+</details>
+
+<details>
+
+<summary>Click to see how to calculate *Variance* by hand</summary>
+
+Let's calculate the `frap` dataset variance by hand.
 
 ```{r}
 frap_order
@@ -497,11 +521,11 @@ Seeing as this is `TRUE`, we calculated it correctly.
 
 ### Standard deviation {.tight-top}
 
+The standard deviation ($\sigma$) is the square root of the variance, and is used to help describe the spread of datasets.
+
 <details>
 
 <summary>Click to see how to calculate standard deviation</summary>
-
-Another common measurement of spread is the standard deviation ($\sigma$). As you remember from class (or may have guessed from the notation on this site), the standard deviation is just the square root of the variance.
 
 ```{r}
 sqrt(var_frap)
@@ -531,15 +555,15 @@ As you can see, we calculated this correctly!
 
 ### Standard error {.tight-top}
 
-<details>
-
-<summary>Click to see how to calculate standard error</summary>
-
 The standard error is used to help understand the spread of data and to help estimate the accuracy of our measurements for things like the mean. The standard error is calculated thusly:
 
 $$
 SE = \frac{\sigma}{\sqrt{n}}
 $$
+
+<details>
+
+<summary>Click to see how to calculate standard error</summary>
 
 There is not a built in function for standard error in *R*, but we can use *DescTools*.
 
@@ -559,15 +583,15 @@ MeanSE(frap_order) #This is from DescTools!
 
 ### Coefficient of variation {.tight-top}
 
-<details>
-
-<summary>Click to see how to calculate coefficient of variation</summary>
-
 The coefficient of variation, another measure of data spread and location, is calculated by the following:
 
 $$
 CV = \frac{\sigma}{\mu}*100
 $$
+
+<details>
+
+<summary>Click to see how to calculate coefficient of variation</summary>
 
 If we were to calculate this by hand, it would be done with this function:
 
