--- a/index.qmd
+++ b/index.qmd
@@ -1,4 +1,4 @@
-# Preface {.unnumbered}
+# Introduction {.unnumbered}
 
 Welcome to Biology 305 at the University of Nebraska at Kearney!
 
@@ -9,13 +9,9 @@ In this class, you will learn:
 3.  Basic multivariate statistics, including ANOVA, correlation, and regression, for comparing multiple different groups.
 4.  The basics of coding and working in *R* for performing statistical analyses.
 
-This site will help you navigate different homework assignments to perform the necessary *R* tests. Furthermore, this GitHub repository contains most of the homework dataframes, so you will *not* have to manually enter assignments if you use *R* to complete some of your assignments.
+This site will help you navigate different homework assignments to perform the necessary *R* tests.
 
 ***Welcome to class!***
-
-Dr. Jacob C. Cooper, BHS 321
-
-Dr. Melissa Wuellner, BHS 345
 
 ## Website authors:
 
@@ -25,7 +21,7 @@ Original lecture organizer, author of many of the example problems.
 
 -   [Dr. Jacob C. Cooper](https://scholar.google.com/citations?user=Q82K8tsAAAAJ)
 
-Original website designer, primary R coding for site
+Original website designer, primary *R* coding for site
 
 -   Caleb Rother
 
