--- a/references.bib
+++ b/references.bib
@@ -67,3 +67,32 @@
     url = "https://figshare.com/articles/dataset/Measurements_on_Canid_Tooth_Scores/8081108",
     doi = "10.6084/m9.figshare.8081108.v1"
 }
+
+@misc{verstraete_photos_2020,
+	title = {Photos and measurements of otoliths from fish caught in the southern part of the {North} {Sea}},
+	url = {https://zenodo.org/records/4066594},
+	doi = {10.5281/zenodo.4066593},
+	language = {eng},
+	urldate = {2025-07-15},
+	publisher = {Zenodo},
+	author = {Verstraete, Hilbran and Courtens, Wouter and Daelemans, Robin and Van de walle, Marc and Vanermen, Nicolas and Desmet, Peter and Stienen, Eric W.M.},
+	month = oct,
+	year = {2020},
+	keywords = {fish, measurements, otolith, photos},
+	file = {Snapshot:/Users/cooperj2/Zotero/storage/ERDM4U4I/4066594.html:text/html},
+}
+
+@misc{weber_fremont_2019,
+	title = {Fremont {Bridge} {Hourly} {Bicycle} {Counts} by {Month} {October} 2012 to present},
+	url = {https://zenodo.org/records/2648564},
+	doi = {10.5281/zenodo.2648563},
+	abstract = {The Fremont Bridge Bicycle Counter records the number of bikes that cross the bridge using the pedestrian/bicycle pathways. Inductive loops on the east and west pathways count the passing of bicycles regardless of travel direction. The data consists of a date/time field: Date, east pathway count field: Fremont Bridge NB, and west pathway count field: Fremont Bridge SB. The count fields represent the total bicycles detected during the specified one hour period. Direction of travel is not specified, but in general most traffic in the Fremont Bridge NB field is travelling northbound and most traffic in the Fremont Bridge SB field is travelling southbound.},
+	language = {eng},
+	urldate = {2025-07-15},
+	publisher = {Zenodo},
+	author = {Weber, Gerald},
+	month = apr,
+	year = {2019},
+	keywords = {bicycle, traffic, fremont, seattle, counts, bike counts, bike},
+	file = {Snapshot:/Users/cooperj2/Zotero/storage/P8D8X4T6/2648564.html:text/html},
+}
